fix: add missed letter-spacing

--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -75,7 +75,7 @@ $text-gradient: linear-gradient(145.08deg, #E61726 12.35%, #D4208C 83.63%);
     background: $red;
     width: 50%;
     height: 50px;
-    letter-spacing: 20%;
+    letter-spacing: 5px;
   }
 }
 .hidden {
